Bug 509329 - Various issues with invalidation of backgrounds propagated from body to the canvas, and with sized backgrounds.  r=dbaron